# ai-web-summarizer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/app/: __init__.py  demo.ipynb
src/app/adapters/: fetchers.py  llm_clients.py  parsers.py
src/app/config/: settings.py
src/app/core/: exceptions.py  models.py  pipeline.py  protocols.py
src/app/presentation/: cli.py  gradio_app.py  presenter.py
